kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: url-shortener
  labels:
    app: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: LoadBalancer   # AWS will provision an ELB automatically
